--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
+    "redux-persist": "^6.0.0",
     "styled-reset": "^4.4.2"
   },
   "devDependencies": {
